# MonteCarloSimulator

./: .gitignore  CMakeLists.txt  DESIGN.md  DEVELOPER_GUIDE.md  README.md  SUMMARY.md  montecarlo.hpp
.github/workflows/: ci.yml
_codeql_build_dir/examples/: dice_rolling  integration  option_pricing  pi_estimation
_codeql_build_dir/tests/: test_random  test_simulator
bench/: CMakeLists.txt  bench_monte_carlo.cpp
cmake/: MClibConfig.cmake.in  MonteCarloSimulatorConfig.cmake.in
core/: concepts.hpp  engine.hpp  result.hpp
docs/: QUICKSTART.md
examples/: CMakeLists.txt  dice_roll.cpp  dice_rolling.cpp  example_functions.hpp  integration.cpp  main.cpp  numerical_integration.cpp  option_pricing.cpp  pi.cpp  pi_estimation.cpp  pi_estimation_gpu.cpp
execution/: parallel.hpp  sequential.hpp
include/mc/: core.hpp
include/montecarlo/: montecarlo.h  montecarlo.hpp  random.h  simulator.h
include/montecarlo/core/: concepts.hpp  engine.hpp  result.hpp  rng.hpp  transform.hpp
include/montecarlo/execution/: gpu.hpp  parallel.hpp  sequential.hpp
tests/: CMakeLists.txt  basic_constant_one.cpp  gpu_smoke.cpp  stub_rng.hpp  test_random.cpp  test_simulator.cpp  unit_tests.cpp
